--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
   "dependencies": {
     "@databases/pg": "^5.4.1",
     "fastify": "^4.20.0",
-    "fastify-plugin": "^4.5.1",
+    "fastify-plugin": "^4.5.1"
+  },
+  "devDependencies": {
+    "@tsconfig/node18": "^18.2.0",
+    "@types/node": "^20.4.2",
+    "eslint": "^8.45.0",
+    "ts-node": "^10.9.1",
+    "ts-standard": "^12.0.2",
     "typescript": "^5.1.6"
   }
 }
