--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run clean && tsc",
+    "clean": "rimraf dist",
+    "dev": "node -r ts-node/register -r dotenv/config index.ts",
+    "lint": "eslint .",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,10 +27,32 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.0",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.2",
+    "dotenv": "^16.3.1",
     "eslint": "^8.45.0",
+    "jest": "^29.6.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-standard": "^12.0.2",
     "typescript": "^5.1.6"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageDirectory": "coverage",
+    "coverageReporters": [
+      "lcov",
+      "text"
+    ],
+    "passWithNoTests": true,
+    "testEnvironment": "node",
+    "verbose": true,
+    "preset": "ts-jest"
+  },
+  "standard": {
+    "env": {
+      "jest": true,
+      "node": true
+    }
   }
 }
